Ingress_nginx_Impl/Pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
