Ingress_nginx_Impl/Pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    app: httpd-app
spec:
  containers:
  - name: httpd
    image: httpd:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: httpd-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
